--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body{
     border-radius: 8px;
     height: 606px;
     margin-bottom: 30px;
-    width: 467px;
+    width: 588px;
     background-color:rgb(4, 115, 143);
     border-radius: 20px;
 }
@@ -27,9 +27,10 @@ button{
     font-weight: bold;
     color: black;
     border-radius: 97px;
-    height: 82px;
+    height: 79px;
     font-size: 40px;
-    width: 111px;
+    margin: 2px;
+    width: 109px;
     background-color: lightseagreen;
 }
 button:hover{
@@ -37,7 +38,7 @@ button:hover{
 }
 input{
     height: 54px;
-    width: 440px;
+    width: 565px;
     margin-top: 10px;
     font-family: Arial, Helvetica, sans-serif;
     background-color: blanchedalmond;
