--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ button{
     height: 79px;
     font-size: 40px;
     margin: 2px;
+    outline: none;
     width: 109px;
     background-color: lightseagreen;
 }
